Fixed mobile responsiveness issues and removed horizontal scroll

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -167,7 +167,9 @@
   * {
     box-sizing: border-box;
   }
-
+body{
+  overflow-x: hidden;
+}
   .navitem {
     display: none;
     background-color: #ff5722;
@@ -207,7 +209,7 @@
     display: block;
     cursor: pointer;
     position:fixed;
-    top:50%;
+   
     left:50%;
     transform: translate(-50%, -50%);
    
