--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ html {
   height: 100%;
   width: 100%;
   color: white;
+  overflow-x: hidden;
   font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 ::selection {
